# warehouse

./: .env.example  .env.production  .gitignore  Makefile  README.md  go.mod  go.sum  postman_collection.json  pyproject.toml
.archive/reports/: finance_ledger_audit.md
.github/: pull_request_template.md
.github/agents/: copilot-instructions.md
.postman/: config.json
.specify/memory/: constitution.md
Finance API/: opencollection.yml
Finance API/Accounts/: Create Account.yml  Delete Account.yml  Get Account by ID.yml  Get All Accounts.yml  Update Account.yml
Finance API/Categories/: Create Category.yml  Delete Category.yml  Get All Categories.yml  Get Categories by Domain.yml  Get Category Tree by Domain.yml  Get Category Tree.yml  Update Category.yml  folder.yml
Finance API/Dashboard/: Get Dashboard.yml
Finance API/Transactions/: Batch Create Transactions.yml  Create Transaction.yml  Delete Transaction.yml  Get All Transactions.yml  Get Transaction by ID.yml  Get Transactions with Filters.yml  Update Transaction.yml  folder.yml
cmd/browser/: main.go
cmd/cli/: main.go  main_test.go
cmd/server/: main.go
internal/browser/: client.go
internal/frontmatter/: config.go  config_test.go  generator.go  generator_test.go  io.go  io_test.go  migrator.go  parser.go  (+12 more)
tests/: test_cli_smoke.py  test_people_command.py  test_people_name_parts.py  test_phone_numbers.py  test_settings_and_boundaries.py  test_sort_names.py  test_spotify_client.py
warehouse/: __init__.py  __main__.py
warehouse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+227 files in other folders)
