[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse"
version = "2.0.0"
description = "Personal data warehouse CLI — finance, career, people, and music enrichment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.9.0",
  "requests>=2.28.0",
  "python-dotenv>=0.19.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
  "questionary>=2.1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "mypy>=1.10.0", "ruff>=0.5.0"]

[project.scripts]
warehouse = "warehouse.cli.main:main"

[tool.setuptools.packages.find]
include = ["warehouse*"]

[tool.setuptools.package-data]
"warehouse" = ["migrations/*.sql"]


[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
packages = ["warehouse"]
ignore_missing_imports = true
